# npb

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  flake.nix  pyproject.toml
examples/: ratatui_eval.rs
notes/: nix-eval-jobs-darwin-maxrss-issue.md
npd/: __init__.py  cli.py  model.py
src/: build.rs  cache.rs  cacheversion.rs  clean.rs  diff.rs  eval.rs  evalfile.rs  hydra.rs  live.rs  main.rs  model.rs  paths.rs  prompt.rs  report.rs  schema.sql  store.rs
