[package]
name = "npd"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.16"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
ureq = "2"
zstd = "0.13"

# Only for `examples/ratatui_eval.rs`, the alternative-renderer prototype — the
# npd binary itself does not depend on any of these. The example uses crossterm
# via `ratatui::crossterm` rather than a separate dependency.
[dev-dependencies]
ratatui = "0.29"
ctrlc = "3"
